--- a/style.css
+++ b/style.css
@@ -1,128 +1,1 @@
-* {
-    cursor: url('icon-porfolio.png'), auto;
-    font-family: 'MartianMono';
-    text-align: center;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    background-image: url(https://www.emptyspace.photo/assets/images/dot-grid.svg);
-    background-repeat: repeat;
-}
-
-@font-face {
-    font-family: 'MartianMono';
-    src: url('fonts/MartianMono-VariableFont_wdth\,wght.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-main {
-    background-color: rgb(255, 255, 255);
-    margin: auto;
-    margin-top: 20%;
-    max-width: 1200px;
-    padding: 3vh 0px;
-}
-
-h1 {
-    font-size: 300%;
-}
-
-p {
-    margin-top: 60px;
-    font-size: 200%;
-}
-
-@media (max-width: 1200px) {
-    main {
-        max-width: 110vh;
-    }
-
-    h1 {
-        font-size: 250%;
-    }
-
-    p {
-        margin: auto;
-        margin-top: 60px;
-        font-size: 150%;
-        width: 700px;
-        text-align: center;
-    }
-}
-
-@media (max-width: 900px) {
-
-
-    h1 {
-        font-weight: 500;
-    }
-}
-
-@media (max-width: 700px) {
-    main {
-        margin-top: 50%;
-        max-width: 110vh;
-    }
-
-    h1 {
-        font-size: 160%;
-        width: 80%;
-        margin: auto;
-        text-align: center;
-    }
-
-    p {
-        margin-top: 60px;
-        font-size: 100%;
-        width: 80%;
-        text-align: center;
-    }
-}
-
-
-@media (max-width: 560px) {
-    main {
-        margin-top: 60%;
-        max-width: 110vh;
-    }
-
-    h1 {
-        font-size: 140%;
-        width: 80%;
-        margin: auto;
-        text-align: center;
-    }
-
-    p {
-        margin-top: 0px;
-        margin-top: 60px;
-        font-size: 80%;
-        width: 80%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 400px) {
-    main {
-        margin-top: 60%;
-        max-width: 110vh;
-    }
-
-    h1 {
-        font-size: 140%;
-        width: 100%;
-        margin: auto;
-        text-align: center;
-    }
-
-    p {
-        margin-top: 0px;
-        margin-top: 60px;
-        font-size: 80%;
-        width: 80%;
-        text-align: center;
-    }
-}
+:root{--main-font:'MartianMono',Arial,Helvetica,sans-serif;--bg-pattern:url('https://www.emptyspace.photo/assets/images/dot-grid.svg')}*{cursor:url('icon-porfolio.png'),auto;font-family:var(--main-font);text-align:center}body{background:white var(--bg-pattern) repeat}@font-face{font-family:'MartianMono';src:url('fonts/MartianMono-VariableFont_wdth\,wght.ttf') format('truetype');font-weight:normal;font-style:normal}main{background-color:#fff;margin:20% auto 0;max-width:1200px;padding:3vh 0}h1{font-size:3rem}p{margin-top:60px;font-size:2rem}@media(max-width:1200px){main{max-width:110vh}h1{font-size:2.5rem}p{font-size:1.5rem;width:700px;margin:60px auto 0}}@media(max-width:900px){h1{font-weight:500}}@media(max-width:700px){main{margin-top:50%}h1,p{width:80%;margin:auto;text-align:center}h1{font-size:1.6rem}p{font-size:1rem;margin-top:60px}}@media(max-width:560px){main{margin-top:60%}h1{font-size:1.4rem}p{font-size:0.8rem;margin-top:60px}}@media(max-width:400px){h1{width:100%}p{width:80%}}
